<?xml version="1.0" encoding="utf-8"?>
<!--GRADIENT-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:background="@drawable/gradient">
    <!--WHITE BOX-->
    <View
            android:layout_width="325dp"
            android:layout_height="669dp"
            android:background="#ffffff"
            android:id="@+id/view" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="visible"/>

    <!--BANNER-->
    <TextView
            android:text="@string/narking_lot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp" android:textStyle="bold" android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:id="@+id/Banner" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="@+id/view"/>
    <!--SIGN IN SUBBANNER-->
    <TextView
            android:text="@string/sign_in"
            android:layout_width="63dp"
            android:layout_height="27dp"
            android:textSize="20sp" android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/SignIn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/Banner"/>
    <!--USERNAME LABEL-->
    <TextView
            android:text="@string/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:id="@+id/username" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/SignIn" android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="@+id/view" android:layout_marginLeft="25dp"/>
    <!--PASSWORD LABEL-->
    <TextView
            android:text="@string/password"
            android:layout_width="92dp"
            android:layout_height="23dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:id="@+id/password" app:layout_constraintStart_toStartOf="@+id/view" android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/username"/>
    <!--USERNAME INPUT-->
    <EditText
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernamein"
            app:layout_constraintStart_toEndOf="@+id/username" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/view" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/SignIn"/>
    <!--PASSWORD INPUT-->
    <EditText
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordin"
            app:layout_constraintEnd_toEndOf="@+id/view" android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/usernamein"/>
    <!--SIGN IN BUTTON-->
    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SignInButton"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordin"
            app:layout_constraintEnd_toEndOf="@+id/view" app:layout_constraintStart_toEndOf="@+id/GuestButton"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <!--GUEST SIGN IN BUTTON-->
    <Button
            android:text="@string/guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GuestButton"
            app:layout_constraintStart_toStartOf="@+id/view"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/passwordin"/>

</android.support.constraint.ConstraintLayout>

